--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>DATING FOR RMIT - LOG IN</title>
+        <title>BEAT - LOG IN</title>
         <link type=" text/css" rel="stylesheet" href="login.css" />
     </head>
 
