--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="https://www.instagram.com/" target="_blank">Forgot password</a>
                 </div>
                 <button class="login_button">
-                    <a href="https://www.youtube.com/">Log in</a></button>
+                    <a href="https://tungxk.github.io/BEAT_mainUI/">Log in</a></button>
             </div1>
             <div class="picture_block">
                 <img class="dating_pic" src="">
