--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <div><input type="checkbox"> Remember me</div>
                     <a href="https://www.instagram.com/" target="_blank">Forgot password</a>
                 </div>
-                <button class="login_button">
-                    <a href="https://tungxk.github.io/BEAT_mainUI/">Log in</a></button>
+                <button class="login_button" type"button" onclick="location.href='https://tungxk.github.io/BEAT_mainUI/'">
+                    Log in</button>
             </div1>
             <div class="picture_block">
                 <img class="dating_pic" src="">
