--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="main_grid">
             <div1 class="second_main_grid">
                 <div class="signin_block">Sign in</div>
-                <div> New user? <a href="https://www.youtube.com/" target="_blank">Create an account</a></div>
+                <div> New user? <a href="https://tungxk.github.io/BEAT_mainUI/" target="_blank">Create an account</a></div>
                 <div>
                     <input type="text" placeholder="Username/Email address" style="font-size: 17px;"/>
                 </div>
@@ -20,7 +20,7 @@
 
                 <div class="password_catalogy">
                     <div><input type="checkbox"> Remember me</div>
-                    <a href="https://www.instagram.com/" target="_blank">Forgot password</a>
+                    <a href="https://tungxk.github.io/BEAT_mainUI/" target="_blank">Forgot password</a>
                 </div>
                 <button class="login_button" type"button" onclick="location.href='https://tungxk.github.io/BEAT_mainUI/'">
                     Log in</button>
