--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     Log in</button>
             </div1>
             <div class="picture_block">
-                <img class="dating_pic" src="">
+                <img class="dating_pic" src="dating_pic.png">
             </div>   
         </div>
         
